--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ license = "MIT OR Apache-2.0"
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 base64 = "0.21.4"
 gloo = "0.10"
+gloo-events = "0.2"
 js-sys = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 
 [dependencies.web-sys]
 version = "0.3"
