--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -62,7 +62,7 @@ jobs:
         - name: Build with Trunk
           run: |
             rustup target add wasm32-unknown-unknown
-            cargo install --locked trunk
+            cargo install --locked --force trunk
             make build
 
         - name: Upload artifact
