--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,16 @@ wasm-bindgen = "0.2"
 
 [dependencies.web-sys]
 version = "0.3"
-features = ["File", "DragEvent", "DataTransfer", "Window"]
+features = [
+    "File", 
+    "DragEvent", 
+    "DataTransfer", 
+    "Window",
+    "MediaQueryList",
+    "Element",
+    "HtmlElement",
+    "Document"
+]
 
 [dev-dependencies.web-sys]
 version = "0.3"
